--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 chrono = "0.4.37"
 futures = "0.3.30"
 gloo = "0.11.0"
-nostro2 = "0.1.17"
+nostro2 = "0.1.18"
 serde_json = "1.0.115"
 wasm-bindgen = "0.2.92"
 web-sys = { version = "0.3.69", features = ["HtmlTextAreaElement"] }
@@ -19,3 +19,4 @@ gloo-net = "0.4"
 async-channel = "2.2.0"
 serde = { version = "1.0.197", features = ["derive"] }
 gloo-timers = "0.3.0"
+wasm-bindgen-futures = "0.4.42"
